--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@ h2 {
 #main-bio {
     float: left;
     width: 70%;
+    line-height: 1.5;
 }
 
 #contact-info{
@@ -41,4 +42,8 @@ h2 {
     float: left;
     width: 200px;
     margin: 0 10px 0 0;
+}
+
+a {
+    color: #d21034;
 }
